add incremental learning

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="From Motion Tracking to Versatile Humanoid Control via Guided Diffusion">
+  <meta name="description" content="Multi-Modal Manipulation via Policy Consensus">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Multi-Modal Manipulation via Multi-Modal Policy Consensus</title>
 
@@ -40,8 +40,8 @@
     <div class="overlay"></div>
     
     <div style="position: absolute; bottom: 20px; right: 20px; color: white; padding: 10px 15px; border-radius: 8px; font-size: 0.9rem; max-width: 380px; z-index: 10; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
-      <div style="margin-bottom: 5px;"><sup>*</sup> Equal contribution; order decided by coin toss.</div>
-      <div><sup>†</sup> Equal advising; order mirrors the coin toss</div>
+      <div style="margin-bottom: 5px;"><sup>*</sup> Equal contribution</div>
+      <div><sup>†</sup> Equal advising</div>
     </div>
   
   <div class="hero-head is-hidden-mobile">
