update github link

--- a/index.html
+++ b/index.html
@@ -55,14 +55,20 @@
               </span>
               <span>arXiv</span>
             </a>
-            <a href="https://youtu.be/cPgduP0Sj7s?si=5kl0V7k0Takoju1x" class="navbar-item pl-4 pr-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
+            <a href="https://youtu.be/mU3_YXrMrWE" class="navbar-item pl-4 pr-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
               <span class="icon" style="margin-right:5px;">
                 <i class="fab fa-youtube"></i>
               </span>
               <span>Video</span>
-            
-            <a href="https://github.com/haonan16/adaptive_scene/tree/cleanup?tab=readme-ov-file" class="navbar-item pl-4 pr-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
-              <span class="icon style="margin-right:5px;">
+            </a>
+            <a href="https://www.notion.so/Multi-Modal-Manipulation-via-Policy-Consensus-28645464339980d6a8a4ca588dec3905" class="navbar-item pl-4 pr-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
+              <span class="icon" style="margin-right:5px;">
+                <i class="fas fa-blog"></i>
+              </span>
+              <span>Blog</span>
+            </a>
+            <a href="https://github.com/policyconsensus/policyconsensus" class="navbar-item pl-4 pr-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
+              <span class="icon" style="margin-right:5px;">
                 <i class="fab fa-github"></i>
               </span>
               <span>Code</span>
@@ -85,7 +91,7 @@
 
     <p style="font-size: 1.5rem; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
       <a href="https://haonan16.github.io/">Haonan Chen<sup>1,4</sup></a>, 
-      <a href="">Jiaming Xu<sup>1*</sup></a>, 
+      <a href="https://www.linkedin.com/in/jiaming-xu-7b4857264/">Jiaming Xu<sup>1*</sup></a>, 
       <a href="https://www.linkedin.com/in/hongyu-chen-91996b22b">Hongyu Chen<sup>1*</sup></a>, 
       <a href="https://www.linkedin.com/in/kaiwen-hong-524520141/?locale=en_US">Kaiwen Hong<sup>1</sup></a>, 
       <a href="https://binghao-huang.github.io/">Binghao Huang<sup>2</sup></a>, 
@@ -114,7 +120,7 @@
       <div class="column is-half">
         <h2 class="title is-2">Video</h2>
         <div class="publication-video" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-          <iframe src="https://www.youtube.com/embed/cPgduP0Sj7s?si=hfaT9_J54v4uwxD2"
+          <iframe src="https://www.youtube.com/embed/mU3_YXrMrWE"
                   frameborder="0"
                   allow="autoplay; encrypted-media"
                   allowfullscreen
