--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <section class="section">
   <div class="container">
-    <h2 class="title is-2" style="text-align: center; margin-bottom: 0.5rem;">Adaptive Representation Importance</h2>
+    <h2 class="title is-2" style="text-align: center; margin-bottom: 0.5rem;">Adaptive Modality Importance Analysis</h2>
     <p class="subtitle is-5 has-text-centered" style="color: #666; margin-bottom: 2.5rem; margin-top: 0;">Perturbation-based analysis reveals dynamic shifts between modalities across task stages</p>
     <div class="columns is-centered">
       <div class="column is-half is-centered has-text-centered">
