--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <section class="section">
   <div class="container">
     <h2 class="title is-2" style="text-align: center; margin-bottom: 0.5rem;">Is Feature Concatenation the Policy Bottleneck?</h2>
-    <p class="subtitle is-5 has-text-centered" style="color: #666; margin-bottom: 2.5rem; margin-top: 0;">Comparing feature concatenation baseline vs. our policy consensus approach</p>
+    <p class="subtitle is-5 has-text-centered" style="color: #666; margin-bottom: 2.5rem; margin-top: 0;">Feature concatenation baseline vs. factorized MoE fusion vs. ours</p>
     <div class="columns is-centered">
       <div class="column is-8 has-text-centered">
         <video autoplay loop muted playsinline controls preload="metadata" src="./static/videos/feature_concatencation.mp4" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
@@ -185,7 +185,7 @@
 
 <section class="section">
   <div class="container">
-    <h2 class="title is-2" style="text-align: center; margin-bottom: 0.5rem;">Adaptive Modality Importance Analysis</h2>
+    <h2 class="title is-2" style="text-align: center; margin-bottom: 0.5rem;">Modality Importance Analysis</h2>
     <p class="subtitle is-5 has-text-centered" style="color: #666; margin-bottom: 2.5rem; margin-top: 0;">Perturbation-based analysis reveals dynamic shifts between modalities across task stages</p>
     <div class="columns is-centered">
       <div class="column is-half is-centered has-text-centered">
@@ -201,10 +201,10 @@
 <section class="section">
   <div class="container">
     <h2 class="title is-2 has-text-centered" style="margin-bottom: 0.5rem;">
-      Policy Robustness Under Perturbations
+      Policy Adaptiveness Under Perturbations
     </h2>
     <p class="subtitle is-5 has-text-centered" style="color: #666; margin-bottom: 2.5rem; margin-top: 0;">
-      Our policy maintains performance under physical perturbations and sensor corruptions
+      Our policy maintains performance under runtime perturbations, object repositioning, and sensor corruptions
     </p>
 
     <!-- Row 1 -->
