--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </a>
                 </span>
 
-              <!-- Video Link. -->
+              <!-- Teaser Video Link. -->
               <span class="link-block">
                 <a target="_blank" href="https://youtu.be/mU3_YXrMrWE"
                    class="external-link button is-normal is-rounded is-dark">
@@ -97,6 +97,17 @@
                       <i class="fab fa-youtube"></i>
                   </span>
                   <span>Teaser Video</span>
+                </a>
+              </span>
+
+              <!-- Technical Video Link. -->
+              <span class="link-block">
+                <a target="_blank" href="https://www.youtube.com/watch?v=gT_zpOjZPxc"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-video"></i>
+                  </span>
+                  <span>Technical Video</span>
                 </a>
               </span>
 
@@ -141,13 +152,24 @@
   </section>
 
 <section class="section">
-  <div class="container is-max-widescreen mb-6">
-    <div class="has-text-centered">
+  <div class="container is-max-widescreen">
+    <div class="has-text-centered" style="margin-bottom: 3rem;">
       <h2 class="title is-3">Teaser Video</h2>
       <div style="display: flex; justify-content: center; margin: 0 auto;">
         <iframe
           src="https://www.youtube.com/embed/mU3_YXrMrWE"
-          style="width: 80%; height: 540px; border: none;"
+          style="width: 70%; height: 450px; border: none;"
+          allow="autoplay; encrypted-media"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+    <div class="has-text-centered">
+      <h2 class="title is-3">Technical Video</h2>
+      <div style="display: flex; justify-content: center; margin: 0 auto;">
+        <iframe
+          src="https://www.youtube.com/embed/gT_zpOjZPxc"
+          style="width: 70%; height: 450px; border: none;"
           allow="autoplay; encrypted-media"
           allowfullscreen>
         </iframe>
